--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/style.css">
   <script src="src/data/exampleVideoData.js"></script>
+  <script src="compiled/src/config/youtube.js"></script>
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="node_modules/react/dist/react.js"></script>
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
@@ -15,6 +16,7 @@
 <body>
   <div id="app"></div>
   <script src="compiled/src/components/VideoListEntry.js"></script>
+  <script src="compiled/src/lib/searchYouTube.js"></script>
   <script src="compiled/src/components/VideoList.js"></script>
   <script src="compiled/src/components/VideoPlayer.js"></script>
   <script src="compiled/src/components/Nav.js"></script>
