--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="node_modules/react/dist/react.js"></script>
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
   <script src="node_modules/lodash/lodash.js"></script>
+  <script src="src/lib/searchYouTube.js"></script>
 </head>
 <body>
   <div id="app"></div>
